--- a/Persistence/app/src/main/res/layout/activity_main.xml
+++ b/Persistence/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -14,20 +15,30 @@
             layout="@layout/top_navigation_layout" />
     </LinearLayout>
 
-    <RelativeLayout
+    <android.support.design.widget.NavigationView
         android:id="@+id/left_drawer"
-        android:layout_width="300dp"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="left"
-        android:background="#90FF91">
-        <FrameLayout
-            android:id="@+id/drawer_top_frame"
-            android:layout_width="match_parent"
-            android:layout_height="120dp"></FrameLayout>
-        <ListView
-            android:id="@+id/drawer_list"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"></ListView>
-    </RelativeLayout>
+        app:insetForeground="@android:color/transparent"
+        app:headerLayout="@layout/drawer_left_login_layout"
+        app:menu="@menu/drawer_list">
+    </android.support.design.widget.NavigationView>
+
+    <!--<RelativeLayout-->
+        <!--android:id="@+id/left_drawer"-->
+        <!--android:layout_width="300dp"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:layout_gravity="left"-->
+        <!--android:background="#90FF91">-->
+        <!--<FrameLayout-->
+            <!--android:id="@+id/drawer_top_frame"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="120dp"></FrameLayout>-->
+        <!--<ListView-->
+            <!--android:id="@+id/drawer_list"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"></ListView>-->
+    <!--</RelativeLayout>-->
 
 </android.support.v4.widget.DrawerLayout>
