--- a/Persistence/app/src/main/res/values/styles.xml
+++ b/Persistence/app/src/main/res/values/styles.xml
@@ -12,11 +12,28 @@
         <item name="android:background">@null</item>
     </style>
 
-    <style name="NoAinimationStyle" parent="AppTheme">
-        <item name="android:windowAnimationStyle">@style/NoAnimation</item>
+
+    <!-- NoAinimationStyle.A和NoAinimationStyle.B组合使用，实现网易云音乐登录注册页面的切换效果（即activity无切换动画） -->
+    <style name="NoAinimationStyle.A" parent="AppTheme">
+        <item name="android:windowAnimationStyle">@style/NoAnimationA</item>
+    </style>
+    
+    <style name="NoAinimationStyle.B" parent="AppTheme">
+        <item name="android:windowAnimationStyle">@style/NoAnimationB</item>
     </style>
 
-    <style name="NoAnimation">
+    <style name="NoAnimationA"  parent="android:Animation.Activity">
+        <item name="android:activityCloseEnterAnimation">@null</item> <!-- 设置A的进入效果 -->
+        <item name="android:activityCloseExitAnimation">@null</item> <!-- 设置B的退出效果 --> <!-- 当且仅当同时设置这两个属性才能实现activity切换无动画 -->
+    </style>
+
+    <style name="NoAnimationB">
+        <!--
+            android:activityOpenEnterAnimation  一个activity创建进入的效果。
+            android:activityOpenExitAnimation   一个activity还没有finish()下退出效果, 比如有俩个activity A与B 首先启动A 然后再启动B 那么A还没有finish()  这时A的退出效果。
+            android:activityCloseEnterAnimation 表示上一个activity返回进入效果 比如有俩个activity A与B  B在最上面，B退出(finish)后 A重新进入的效果。
+            android:activityCloseExitAnimation  表示的是activity finish()之后的效果 比如有俩个activity A与B B退出后会被finish() 那么B的退出效果在这定义。
+        -->
         <item name="android:activityOpenEnterAnimation">@null</item>
         <item name="android:activityOpenExitAnimation">@null</item>
         <item name="android:activityCloseEnterAnimation">@null</item>
